force-app/main/default/objects/ServiceQuestionDefinedResponse__c/ServiceQuestionDefinedResponse__c.object-meta.xml
<CustomObject>
    <description>Service Question Defined Response relates a Question Defined Response to a Service Question. Service Question Defined Response is related to Service Question and Project Service Question Defined Response.</description>
    <label>Service Question Defined Response</label>
    <nameField>
        <displayFormat>SQDR-{00000000}</displayFormat>
        <label>Service Question Defined Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Question Defined Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>