force-app/main/default/objects/ServiceQuestionDefinedResponse__c/fields/DefinedResponseText__c.field-meta.xml
<CustomField>
    <fullName>DefinedResponseText__c</fullName>
    <description>The text that will be shown for this response</description>
    <formula>QuestionDefinedResponse__r.DefinedResponseText__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The text that will be shown for this response</inlineHelpText>
    <label>Defined Response Text</label>
    <type>Text</type>
</CustomField>