force-app/main/default/objects/ServiceQuestionDefinedResponse__c/fields/EndofQuestions__c.field-meta.xml
<CustomField>
    <fullName>EndofQuestions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End of Questions</label>
    <type>Checkbox</type>
</CustomField>