force-app/main/default/objects/ServiceQuestionDefinedResponse__c/fields/JumpToQuestion__c.field-meta.xml
<CustomField>
    <fullName>JumpToQuestion__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Jump To Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Service Question Defined Responses</relationshipLabel>
    <relationshipName>Service_Question_Defined_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>