force-app/main/default/objects/ServiceQuestionDefinedResponse__c/fields/QuestionDefinedResponse__c.field-meta.xml
<CustomField>
    <fullName>QuestionDefinedResponse__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Question Defined Response</label>
    <referenceTo>QuestionDefinedResponse__c</referenceTo>
    <relationshipLabel>Service Question Defined Responses</relationshipLabel>
    <relationshipName>Service_Questions_Jump</relationshipName>
    <type>Lookup</type>
</CustomField>