force-app/main/default/objects/ServiceQuestionDefinedResponse__c/fields/ServiceQuestion__c.field-meta.xml
<CustomField>
    <fullName>ServiceQuestion__c</fullName>
    <label>Service Question</label>
    <referenceTo>ServiceQuestion__c</referenceTo>
    <relationshipLabel>Service Question Defined Responses</relationshipLabel>
    <relationshipName>Service_Questions_Jump</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>